fix: allocate a container whose module refuses privateLookupIn
The allocator behind the raw same-kind copy route binds a no-argument
constructor through privateLookupIn, which needs the target's module to
open the package. No named platform module does, so every JDK container
fell through to the null supplier and the copy was refused -- with advice
to add an opens directive for a module the adopter does not control, for
a constructor that was public and callable the whole time.

Calling a public constructor never needed private access; only binding
one through LambdaMetafactory does. So bind a handle through the public
lookup when privateLookupIn is refused. The pairing gate that decides
whether a copy is buildable and the copy that builds it ask the same
allocator, so fixing it there leaves those two in step. It does not make
them the only two deciders: an abstract target still reaches the bean
writers, which call it constructible and fail at first conversion. That
is a separate change, in the pairing rules rather than here.

The same method also bound abstract classes, whose constructors bind like
any other and then raise InstantiationError when called. Refuse an
abstract type before the constructor arm -- before it, and not before the
builder arm as well: a static builder() on an abstract class returns a
builder whose build() returns something concrete, so that arm allocates
for such a type perfectly well and a guard reaching over it would delete
a working capability.

Nothing was traded away for that. What used to happen was not a plan-time
refusal: it was the copy eagerly calling the allocator and an abstract
class's bound constructor exploding inside it, as an Error, which escaped
the gate that catches RuntimeException to decide this very question. A
predicate asked whether a type can be allocated should answer, and one
that raises a linkage error instead is broken whatever that happens to
abort.

Making the allocator answer for platform types then exposed som